# Trace

./: README.md  future.txt  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  calc.rs  commands.rs  doc_chat.rs  indexer.rs  launcher.rs  lib.rs  llm.rs  main.rs  search.rs  settings.rs  shell_cmd.rs  watcher.rs
